test/vm/fails/invalid_greater_than.js

const res = (11 > "123");
